fix percentages in bview and add totals in project index
