# api/app/dtos/organization/project_index_response_dto.rb
@@ -8,6 +8,7 @@ class Organization::ProjectIndexResponseProjectDto < OpenApiDto
   field "name", :string
   field "description", :string, required: false
   field "client", :object, subtype: Organization::ProjectIndexResponseProjectClientDto
+  field "last_version", :object, subtype: Organization::ProjectVersions::CompactDto
   field "status", :enum, subtype: [ "new", "invoicing_in_progress", "invoiced", "canceled" ]
 end
 
