# api/swagger/v1/swagger.yaml
@@ -900,7 +900,7 @@ paths:
                   results:
                     type: array
                     items:
-                      "$ref": "#/components/schemas/Organization::ProjectIndexResponseProjectDto"
+                      "$ref": "#/components/schemas/Organization::Projects::CompactDto"
         '401':
           description: not authorised
         '404':
@@ -1175,6 +1175,7 @@ components:
       - number
       - created_at
       - retention_guarantee_rate
+      - total_amount
       properties:
         id:
           type: integer
@@ -1185,6 +1186,9 @@ components:
           format: date-time
         retention_guarantee_rate:
           type: integer
+        total_amount:
+          type: string
+          format: decimal
     Organization::CompletionSnapshotIndexRequestDto:
       type: object
       required: []
@@ -1302,6 +1306,7 @@ components:
       type: object
       required:
       - id
+      - original_item_uuid
       - position
       - name
       - quantity
@@ -1310,6 +1315,8 @@ components:
       properties:
         id:
           type: integer
+        original_item_uuid:
+          type: string
         position:
           type: integer
         name:
@@ -2252,6 +2259,7 @@ components:
       - id
       - name
       - client
+      - last_version
       - status
       properties:
         id:
@@ -2263,6 +2271,8 @@ components:
           nullable: true
         client:
           "$ref": "#/components/schemas/Organization::ProjectIndexResponseProjectClientDto"
+        last_version:
+          "$ref": "#/components/schemas/Organization::ProjectVersions::CompactDto"
         status:
           type: string
           enum:
@@ -2349,6 +2359,7 @@ components:
       required:
       - id
       - number
+      - total_amount
       - created_at
       - completion_snapshots
       - ungrouped_items
@@ -2358,6 +2369,9 @@ components:
           type: integer
         number:
           type: integer
+        total_amount:
+          type: string
+          format: decimal
         created_at:
           type: string
           format: date-time
@@ -2380,6 +2394,7 @@ components:
       - name
       - client
       - status
+      - invoiced_amount
       - last_version
       properties:
         id:
@@ -2398,6 +2413,9 @@ components:
           - invoicing_in_progress
           - invoiced
           - canceled
+        invoiced_amount:
+          type: string
+          format: decimal
         last_version:
           "$ref": "#/components/schemas/Organization::ProjectShowResponseProjectLastVersionDto"
     Organization::ProjectShowResponseDto:
@@ -2520,6 +2538,46 @@ components:
       properties:
         result:
           "$ref": "#/components/schemas/Organization::ProjectVersions::ExtendedDto"
+    Organization::Projects::CompactDto:
+      type: object
+      required:
+      - id
+      - name
+      - client
+      - invoiced_amount
+      - last_version
+      - status
+      properties:
+        id:
+          type: integer
+        name:
+          type: string
+        description:
+          type: string
+          nullable: true
+        client:
+          "$ref": "#/components/schemas/Organization::Clients::ExtendedDto"
+        invoiced_amount:
+          type: string
+          format: decimal
+        last_version:
+          "$ref": "#/components/schemas/Organization::ProjectVersions::CompactDto"
+        status:
+          type: string
+          enum:
+          - new
+          - invoicing_in_progress
+          - invoiced
+          - canceled
+    Organization::Projects::IndexDto:
+      type: object
+      required:
+      - results
+      properties:
+        results:
+          type: array
+          items:
+            "$ref": "#/components/schemas/Organization::Projects::CompactDto"
     Organization::ShowCompletionSnapshotResponseDto:
       type: object
       required:
